# template_pico

./: Cargo.toml  README.md  cargo-generate.toml
src/: main.rs
